Stable versions
---------------

4.0.0 ():
	- split library and application in different packages
	- remove OSS sequencer support
	- remove platform-specific device drivers
	- remove all global data, make library code fully thread-safe
	- remove configuration files
	- remove support to uLaw-encoded output
	- extend note range to full 10-octave range
	- extensive code refactoring
	- fix interpolation and sample loop processing
	- fix S404 depacker

3.5.0 (20120127):
	- fix AMF 1.0 module loading (reported by Andre Timmermans), probe
	  for sample loop size
	- fix AMF 1.1+ sample loops when loop start is zero
	- fix AMF track index including track 0 as empty track (reported by
	  Andre Timmermans)
	- fix AMF tremolo effect (reported by Andre Timmermans)
	- fix AMF pitchbend effects (reported by Andre Timmermans)
	- fix AMF volume slide effect
	- fix AMF track allocation
	- fix OpenBSD driver configuration
	- fix patern delay + pattern break command (reported by The Welder)
	- fix memory leaks found by cppcheck (reported by Paul Wise)
	- fix XM note cut on invalid instrument (reported by Benjamin Shadwick)
	- fix invalid memory access in case of mismatched track/pattern lengths
	- fix uninitialized values when loading BoobieSqueezer XM modules
	- fix subinstrument mapping for certain parameters
	- fix invalid memory access in The Player loader
	- fix plugin for Audacious 2.5.4
	- add support to DSMS mod files
	- add YM2149 emulator and improved chip sound support
	- add support to ZX Spectrum AY-3-8192 chiptunes
	- add ZX Spectrum Soundtracker module loader

3.4.1 (20110813):
	- test for unused but set variable warning in gcc (needed to
	  build on MacOS X, reported by Misty De Meo)
	- fix format specifiers in CoreAudio driver messages (reported
	  by Misty De Meo)
	- build audacious3 driver if system has Audacious 2.5
	- change dependency generation flags for clang (reported by Misty
	  De Meo)
	- fix OXM module loading

3.4.0 (20110808):